# rust-waves

./: .gitignore  Cargo.toml  LICENSE  README.md  WARNING.md
input/: _default.toml  exp_fig2a_pre.toml  exp_fig2a_run.toml  exp_ss.toml  exp_ss_pre.toml  guide.md  widths.csv
src/: io.rs  lib.rs  main.rs  plotter.py  plotter_heatmap.py  propagate.rs  propagator.rs  tools.rs  trotterized_operators.rs  types.rs
src/plotting/: ol_stability.py  p1d_dyn_heatmap.py  p3d_snap_projections.py  paper.py  params.py  plot_axial_density.py  plot_widths.py  pra_stability copy.py  rust_launcher.py  trivial_plotter.py  upscaling.py  watcher.py  width.py  width_statistics.py
src/plotting/launch/: rust_launcher.py  rw.py
src/processing/: analyze_h5.py  bloch_analysis.py  ol_stability.py  optimize_final.py  optimize_initial.py  p1d_dyn_heatmap.py  p3d_snap_projections.py  paper.py  params.py  plot_axial_density.py  plot_widths.py  pra_stability copy.py  projections_evolution.py  projections_volumetric.py  run_sweep.py  self_trapping.py  self_trapping_extended.py  self_trapping_l3.py  upscaling.py  watcher.py  width.py  width_statistics.py
src/processing/launch/: rust_launcher.py  rw.py
tests/: integration_tests.rs
