[package]
name = "rust-waves"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustfft = "6.2.0"
nalgebra="0.32.3" 
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
csv = "1.3.0"
log = "0.4"
env_logger = "0.9"
simple_logger = "5.0.0"